<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <include
            android:id="@+id/user_activity_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="30dp"
            layout="@layout/activity_userinterface" />

        <LinearLayout
            android:id="@+id/the_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_activity_Message"
            android:layout_gravity="left|center"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/user_message0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="正在学习："
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/user_message1"
                    android:layout_width="239dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/activity_text0"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/user_message2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="学习进度："
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/user_message3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_message0"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/activity_text2"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/user_message4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="注册时间："
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/user_message5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_message2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:text="2014-10-10"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/the_second"
            android:layout_centerHorizontal="true"
            android:background="@drawable/exit_buuton"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="退出账号" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/user_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="bottom" >

            <ImageView
                android:id="@+id/about_slogon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slogo"
                android:gravity="bottom"
                android:src="@drawable/slogon" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>