<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tc="http://schemas.android.com/apk/res/com.ricoh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEED"
    android:orientation="vertical"
    tools:context="com.example.recite.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/wordsmain_back"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/activity_text0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#777777" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="2dp"
                android:background="#DDDDDD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已掌握单词  "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#777777" />

            <TextView
                android:id="@+id/appMessage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_text2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#777777" />

            <TextView
                android:id="@+id/appMessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_text1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#777777" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <tan.richo.myview.TasksCompletedView
                android:id="@+id/tasks_view"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                tc:circleColor="@color/circle_color"
                tc:radius="60dip"
                tc:ringColor="@color/ring_color"
                tc:strokeWidth="10dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FFF"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/main_notebook" />

            <ImageButton
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FFF"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/main_course" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2.7"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/wordsmain_back"
            android:paddingBottom="25dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="25dp"
            android:text="开始背单词"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#777777" />
    </LinearLayout>

</LinearLayout>